--- a/HappyCup/app/src/main/res/layout/dialog_fail.xml
+++ b/HappyCup/app/src/main/res/layout/dialog_fail.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+
             <ImageView
                 android:id="@+id/imageView18"
-                android:layout_width="200dp"
-                android:layout_height="400dp" />
-    </FrameLayout>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
 
 </layout>
