--- a/HappyCup/app/src/main/res/layout/custom_dialog.xml
+++ b/HappyCup/app/src/main/res/layout/custom_dialog.xml
@@ -27,9 +27,8 @@
                 <ImageView
                     android:layout_width="0px"
                     android:layout_height="match_parent"
-                    android:background="@drawable/trash"
                     android:layout_weight="2"
-                    />
+                    android:background="@drawable/muinki" />
 
                 <LinearLayout
                     android:layout_width="0px"
