패키지 수정 및 인식 성공시 포인트 애니메이션 추가

--- a/HappyCup/app/src/main/res/navigation/login_navigation.xml
+++ b/HappyCup/app/src/main/res/navigation/login_navigation.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/onBoarding"
-        android:name="com.cookandroid.happycup.ui.main.view.fragment.OnBoarding"
+        android:name="com.cookandroid.happycup.ui.main.view.fragment.onboarding.OnBoarding"
         android:label="OnBoarding" />
 </navigation>
