--- a/HappyCup/app/src/main/res/navigation/navigation.xml
+++ b/HappyCup/app/src/main/res/navigation/navigation.xml
@@ -86,5 +86,10 @@
             android:defaultValue='""' />
     </fragment>
     <action android:id="@+id/global_decision" app:destination="@+id/decisionDialog"/>
+    <action android:id="@+id/point_fragment" app:destination="@+id/pointFragment"/>
+    <dialog
+        android:id="@+id/explainDialog"
+        android:name="com.cookandroid.happycup.ui.main.view.dialog.ExplainDialog"
+        android:label="ExplainDialog" />
 
 </navigation>
