--- a/HappyCup/app/src/main/res/layout/fragment_point.xml
+++ b/HappyCup/app/src/main/res/layout/fragment_point.xml
@@ -1,53 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/cstLyGuide"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <android.widget.Button
-        android:id="@+id/btnCupping"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:background="@color/mainColor"
-        android:text="커핑샵으로 가기"
-        android:textColor="@color/white"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cstLyGuide"
-        app:layout_constraintWidth_percent="0.8" />
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/cstLyGuide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.8" />
 
-    <android.widget.Button
-        android:id="@+id/btnMap"
-        android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="15dp"
-        android:background="@android:color/white"
-        android:text="지도로 돌아가기"
-        android:textColor="@color/mainColor"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnCupping"
-        app:layout_constraintWidth_percent="0.8" />
+        <android.widget.Button
+            android:id="@+id/btnCupping"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:background="@color/mainColor"
+            android:text="커핑샵으로 가기"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cstLyGuide"
+            app:layout_constraintWidth_percent="0.8" />
 
-    <ImageView
-        android:id="@+id/imgTree"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        app:layout_constraintBottom_toTopOf="@id/cstLyGuide"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <android.widget.Button
+            android:id="@+id/btnMap"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
+            android:background="@android:color/white"
+            android:text="지도로 돌아가기"
+            android:textColor="@color/mainColor"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnCupping"
+            app:layout_constraintWidth_percent="0.8" />
+
+        <ImageView
+            android:id="@+id/imgTree"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/txtTopic"/>
+
+        <TextView
+            android:id="@+id/txtPoint"
+            style="@style/BaseTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="400새싹 적립 완료!"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtTopic"
+            style="@style/BaseTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="쿠크다스 회원님의 이번 달\n 등급은 환경지키미입니다."
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtPoint" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/cstLyGuide2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.7" />
+
+        <TextView
+            android:id="@+id/txtMyPoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="내 포인트"
+            app:layout_constraintStart_toEndOf="@id/cstLyGuideLeft"
+            app:layout_constraintTop_toBottomOf="@id/cstLyGuide2" />
+
+        <TextView
+            android:id="@+id/txtMypoint2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="9600P"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@id/cstLyGuideRight"
+            app:layout_constraintTop_toBottomOf="@id/cstLyGuide2" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/cstLyGuideRight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.92" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/cstLyGuideLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.07" />
+
+        <TextView
+            android:id="@+id/txtMonthCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:text="이번달 적립 횟수"
+            app:layout_constraintBottom_toTopOf="@+id/btnCupping"
+            app:layout_constraintStart_toEndOf="@id/cstLyGuideLeft" />
+
+        <TextView
+            android:id="@+id/txtMonthCount2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:text="24건"
+            app:layout_constraintBottom_toTopOf="@+id/btnCupping"
+            app:layout_constraintEnd_toStartOf="@id/cstLyGuideRight" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
