--- a/HappyCup/app/src/main/res/layout/layout_button_search.xml
+++ b/HappyCup/app/src/main/res/layout/layout_button_search.xml
@@ -4,7 +4,6 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/Frame_search_btn"
-    android:visibility="visible"
     >
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_search"
@@ -15,6 +14,7 @@
         android:text="검색"
         android:textStyle="bold"
         android:textColor="#000"
+        android:visibility="invisible"
         />
 
     <ProgressBar
